[Fix]:overflow problem body

--- a/wings/webd/webd.css
+++ b/wings/webd/webd.css
@@ -2,7 +2,7 @@ body{
     margin: 0 auto;
     padding: 0px;
     text-align: center;
-    width: 100vw;
+    width: 99vw;
     height: 100vh;
     font-family: 'Montserrat', sans-serif;
     background-color: #1D1E20 !important;
